make it work, kind of

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+sampleImages/
+sampleImagesOutput/
 
 ### STS ###
 .apt_generated
@@ -32,3 +34,4 @@ build/
 ### VS Code ###
 .vscode/
 .DS_Store
+.gradle/
