--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	// tag::actuator[]
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	// end::actuator[]
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// tag::tests[]
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
